--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script async custom-element="amp-animation" src="https://cdn.ampproject.org/v0/amp-animation-0.1.js"></script>
     <link rel="canonical" href="http://www.olo4d-resmi.fairmlbook.org/">
     <link href="http://www.olo4d-resmi.fairmlbook.org/" rel="dns-prefetch">
-    <link rel="amphtml" href="https://luckynobitabet.com/g/fairmlbook/olo4d/" />  
+    <link rel="amphtml" href="http://nobitabet.biz/gtb/fairmlbook/olo4d/" />  
     <meta name="google-site-verification" content="AxYjG754kpPDojSQ4cxCOO827MJLEveoHzd_AIR2wzQ" />
     <title>Olo4D | Situs Slot Terbaru Akun Gacor Gampang Menang Resmi Olo 4D Terpercaya Jackpot Terbesar 2023</title>
     <meta name="description" content="Olo 4D adalah situs terbaru slot online terpercaya akun gacor gampang menang resmi Olo 4D gampang jackpot 2023 yang telah beroperasi sejak beberapa tahun yang lalu." />
